--- a/jmacsrc.in
+++ b/jmacsrc.in
@@ -522,67 +522,67 @@
  Use \f to turn on/off flash
 
 {Basic
-\i   Help Screen    turn off with ^XH   more help with ^X.                       \i
-\i \i\uCURSOR\u           \uGO TO\u           \uUNDO\u      \uMISC\u        \uREGION\u     \uEXIT\u       \i \i
-\i \i^B left ^F right ^[V prev screen ^XU undo  ^[^[ option ^@  mark   ^XK  quit  \i \i
-\i \i^P up   ^N down  ^V  next screen ^^  redo  ^[Q format  ^W  cut    ^X^C save  \i \i
-\i \i^[B prev. word   ^A  beg of line \uDELETE\u    ^L  refresh ^Y  paste  \uFILE\u       \i \i
-\i \i^[F next word    ^E  end of line ^D  char  ^[$ spell   ^[Y switch ^X^W save  \i \i
-\i \i\uSEARCH\u           ^[< top of file ^K  >line ^[M math    ^XA save   ^XI  insert\i \i
-\i \i^S  forward      ^[> end of file ^[D >word ^[% query   ^[| filter ^X^F load  \i \i
-\i \i^R  backward     ^[G to line No. ^[ DEL word<  replace ^XX swap   ^X^B switch\i \i
+\i   Help Screen    \|turn off with ^XH   more help with ^X.                       \i
+\i \i\|\uCURSOR\u           \|\uGO TO\u           \|\uUNDO\u      \|\uMISC\u        \|\uREGION\u     \|\uEXIT\u       \|\i \i
+\i \i\|^B left ^F right \|^[V prev screen \|^XU undo  \|^[^[ option \|^@  mark   \|^XK  quit  \|\i \i
+\i \i\|^P up   ^N down  \|^V  next screen \|^^  redo  \|^[Q format  \|^W  cut    \|^X^C save  \|\i \i
+\i \i\|^[B prev. word   \|^A  beg of line \|\uDELETE\u    \|^L  refresh \|^Y  paste  \|\uFILE\u       \|\i \i
+\i \i\|^[F next word    \|^E  end of line \|^D  char  \|^[$ spell   \|^[Y switch \|^X^W save  \|\i \i
+\i \i\|\uSEARCH\u           \|^[< top of file \|^K  >line \|^[M math    \|^XA save   \|^XI  insert\|\i \i
+\i \i\|^S  forward      \|^[> end of file \|^[D >word \|^[% query   \|^[| filter \|^X^F load  \|\i \i
+\i \i\|^R  backward     \|^[G to line No. \|^[ DEL word<\|  replace \|^XX swap   \|^X^B switch\|\i \i
 }
 
 {Editing 
-\i   Help Screen    turn off with ^XH   prev. screen ^X,  next screen ^X.        \i
-\i \i\uCASE\u           \uTRANSPOSE\u  \uINSERT\u    \uMACROS\u            \uPROGRAMS\u               \i \i
-\i \i^[U  Up word   ^T   Chars ^O  line  ^X( record        ^X^I Indent region     \i \i
-\i \i^[D  Down word ^[T  Words ^C  space ^X) stop          ^[.  Tags file find    \i \i
-\i \i^[C  Cap. word ^X^T Lines `   Ctrl- ^XE play          ^XG  To matching ( [ { \i \i
-\i \i^X^U Up region            ^XT text  ^XQ query suspend ^XC  Parse errors      \i \i
-\i \i^X^L Down region                    ^U  repeat prefix ^XN / ^XP next/prev err\i \i
+\i   Help Screen    \|turn off with ^XH   prev. screen ^X,  next screen ^X.        \i
+\i \i\|\uCASE\u           \|\uTRANSPOSE\u  \|\uINSERT\u    \|\uMACROS\u            \|\uPROGRAMS\u               \|\i \i
+\i \i\|^[U  Up word   \|^T   Chars \|^O  line  \|^X( record        \|^X^I Indent region     \|\i \i
+\i \i\|^[D  Down word \|^[T  Words \|^C  space \|^X) stop          \|^[.  Tags file find    \|\i \i
+\i \i\|^[C  Cap. word \|^X^T Lines \|`   Ctrl- \|^XE play          \|^XG  To matching ( [ { \|\i \i
+\i \i\|^X^U Up region \|           \|^XT text  \|^XQ query suspend \|^XC  Parse errors      \|\i \i
+\i \i\|^X^L Down region\|          \|          \|^U  repeat prefix \|^XN / ^XP next/prev err\|\i \i
 }
 
 {Window
-\i   Help Screen    turn off with ^XH   prev. screen ^X,  next screen ^X.        \i
-\i \i\uWINDOW\u                      \uSCROLL\u     \uSHELL\u       \uCURSOR\u                    \i \i
-\i \i^X2  Split window in half   ^X^P up    ^Z  Suspend ^[P prev. paragraph       \i \i
-\i \i^XO  Switch to other window ^X^N down  ^[! Command ^[N next paragraph        \i \i
-\i \i^XZ  Grow window            ^X<  left  ^[' Window  ^XG to matching ( [ {     \i \i
-\i \i^X^Z Shrink window          ^X>  right             \uBOOKMARK\u                  \i \i
-\i \i^X0  Kill window                                   ^XJ set                   \i \i
-\i \i^X1  Kill all other windows ^X=  status            ^X/ goto                  \i \i
+\i   Help Screen    \|turn off with ^XH   prev. screen ^X,  next screen ^X.        \i
+\i \i\|\uWINDOW\u                      \|\uSCROLL\u     \|\uSHELL\u       \|\uCURSOR\u                    \|\i \i
+\i \i\|^X2  Split window in half   \|^X^P up    \|^Z  Suspend \|^[P prev. paragraph       \|\i \i
+\i \i\|^XO  Switch to other window \|^X^N down  \|^[! Command \|^[N next paragraph        \|\i \i
+\i \i\|^XZ  Grow window            \|^X<  left  \|^[' Window  \|^XG to matching ( [ {     \|\i \i
+\i \i\|^X^Z Shrink window          \|^X>  right \|            \|\uBOOKMARK\u                  \|\i \i
+\i \i\|^X0  Kill window            \|           \|            \|^XJ set                   \|\i \i
+\i \i\|^X1  Kill all other windows \|^X=  status\|            \|^X/ goto                  \|\i \i
 }
 
 {Search
-\i   Help Screen    turn off with ^XH   prev. screen ^X,  next screen ^X.        \i
-\i \iSpecial search sequences:                                                    \i \i
-\i \i    \\^  \\$  matches beg./end of line     \\?     match any single char        \i \i
-\i \i    \\<  \\>  matches beg./end of word     \\*     match 0 or more chars        \i \i
-\i \i    \\c     matches balanced C expression \\\\     matches a \\                  \i \i
-\i \i    \\[..]  matches one of a set          \\n     matches a newline            \i \i
-\i \i    \\+     matches 0 or more of the character which follows the \\+           \i \i
-\i \iSpecial replace sequences:                                                   \i \i
-\i \i    \\&     replaced with text which matched search string                    \i \i
-\i \i    \\0 - 9 replaced with text which matched Nth \\*, \\?, \\c, \\+, or \\[..]     \i \i
-\i \i    \\\\     replaced with \\               \\n     replaced with newline        \i \i
+\i   Help Screen    \|turn off with ^XH   prev. screen ^X,  next screen ^X.        \i
+\i \iSpecial search sequences:                                                    \|\i \i
+\i \i    \\^  \\$  matches beg./end of line      \\?     match any single char       \|\i \i
+\i \i    \\<  \\>  matches beg./end of word      \\*     match 0 or more chars       \|\i \i
+\i \i    \\c      matches balanced C expression \\\\     matches a \\                 \|\i \i
+\i \i    \\[..]   matches one of a set          \\n     matches a newline           \|\i \i
+\i \i    \\+      matches 0 or more of the character which follows the \\+          \|\i \i
+\i \iSpecial replace sequences:                                                   \|\i \i
+\i \i    \\&      replaced with text which matched search string                   \|\i \i
+\i \i    \\0 - 9  replaced with text which matched Nth \\*, \\?, \\c, \\+, or \\[..]    \|\i \i
+\i \i    \\\\      replaced with \\               \\n     replaced with newline       \|\i \i
 }
 
 {Names
-\i   Help Screen    turn off with ^XH   prev. screen ^X,  next screen ^X.        \i
-\i \i Hit TAB at file name prompts to generate menu of file names                 \i \i
-\i \i Or use up/down keys to access history of previously entered names           \i \i
-\i \i Special file names:                                                         \i \i
-\i \i      !command                 Pipe in/out of a shell command                \i \i
-\i \i      >>filename               Append to a file                              \i \i
-\i \i      -                        Read/Write to/from standard I/O               \i \i
-\i \i      filename,START,SIZE      Read/Write a part of a file/device            \i \i
-\i \i          Give START/SIZE in decimal (255), octal (0377) or hex (0xFF)       \i \i
+\i   Help Screen    \|turn off with ^XH   prev. screen ^X,  next screen ^X.        \i
+\i \i Hit TAB at file name prompts to generate menu of file names                 \|\i \i
+\i \i Or use up/down keys to access history of previously entered names           \|\i \i
+\i \i Special file names:                                                         \|\i \i
+\i \i      !command                 Pipe in/out of a shell command                \|\i \i
+\i \i      >>filename               Append to a file                              \|\i \i
+\i \i      -                        Read/Write to/from standard I/O               \|\i \i
+\i \i      filename,START,SIZE      Read/Write a part of a file/device            \|\i \i
+\i \i          Give START/SIZE in decimal (255), octal (0377) or hex (0xFF)       \|\i \i
 }
 
 {Joe
-\i   Help Screen    turn off with ^XH   prev. screen ^X,                         \i
-\i \i Send bug reports to: http://sourceforge.net/projects/joe-editor             \i \i
+\i   Help Screen    \|turn off with ^XH   prev. screen ^X,                         \i
+\i \i Send bug reports to: http://sourceforge.net/projects/joe-editor             \|\i \i
 }
 
  FOURTH SECTION: Key bindings:
